solved the under image overlap

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0;   
+  background: transparent;   
+}
+::-webkit-scrollbar-thumb {
+  background: #FF0000;
+}
+
+/* .undergroundBG{
+  background-image: url('/src/assets/foreground-underground-continuation.png');
+  height: 2px;
+  max-width: 100vw;
+  background-position: center; 
+  background-repeat: no-repeat;  
+  background-size: cover;   
+} */
